# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
page_analyzer/: app.py  config.py  db.py  page_parser.py  url.py
page_analyzer/templates/: base.html  index.html  url.html  urls.html
