[project]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = [
    { name = "Regina Khairutdinova", email = "regina.khajrutdinova@gmail.com" }
]
dependencies = [
    "flask",
    "gunicorn",
    "psycopg2-binary",
    "validators",
    "python-dotenv",
    "requests",
    "beautifulsoup4"
]
requires-python = ">=3.8"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
